# ark-tools

./: .env.example  .gitignore  ARK_TOOLS_COMPLETE_SUMMARY.md  CLAUDE.md  CONTAINER_SETUP_GUIDE.md  EXAMPLES_USAGE.md  GETTING_STARTED.md  LICENSE  PROJECT_SUMMARY.md  PUSH_INSTRUCTIONS.md  QUICK_START_GUIDE.md  README.md  README_ARK_TOOLS_AGENTIC.md  START_HERE.md  UI_LAUNCH_GUIDE.md  ark-setup  docker-compose.yml  install.sh  pyproject.toml  setup.py
.mcp/agents/: ark-architect.yml  ark-detective.yml  ark-guardian.yml  ark-transformer.yml
.mcp/commands/: ark-analyze.yml  ark-deploy.yml  ark-generate.yml  ark-test.yml  ark-transform.yml  scaffold-module.yml  scaffold-project.yml
.mcp/hooks/: config.json
.mcp/hooks/scripts/: generate_test_file.py  validate_environment.py  validate_source_protection.py
docker/api/: Dockerfile  entrypoint.sh
docs/: ADMIN_GUIDE.md  API_DOCUMENTATION.md  ARCHITECTURE.md  CONFIGURATION.md  HYBRID_MAMS_LLM_DESIGN.md  INSTALLATION.md  README.md  SETUP_GUIDE.md  TECHNICAL_REFERENCE.md  USER_GUIDE.md
src/ark_tools/: __init__.py  cli.py  server.py
src/ark_tools/agents/: __init__.py  architect.py  base.py
src/ark_tools/api/: __init__.py  app.py  health.py
src/ark_tools/api/v1/: __init__.py  agent_routes.py  analysis_routes.py  blueprint.py  hybrid_routes.py  project_routes.py  transformation_routes.py
src/ark_tools/core/: __init__.py  analysis.py  engine.py  safety.py  transformation.py
src/ark_tools/database/: __init__.py  base.py
src/ark_tools/database/models/: __init__.py  analysis.py  transformation.py
src/ark_tools/llm_engine/: __init__.py  engine.py
src/ark_tools/mams_core/: __init__.py  compressor.py  mams_002_backend_discovery_v2.py  mams_002_discovery.py  mams_002_simple_storage.py  mams_002_simplified.py  mams_003_frontend_classification.py  mams_004_frontend_naming_standards.py  mams_004_naming_test.py  mams_005_012_frontend_completion.py  mams_005_template_mapping.py  mams_006_migration_planning_engine.py  mams_007_change_propagation_system.py  mams_008_dependency_resolution_engine.py  mams_009_test_generation_system.py  mams_010_011_012_execution_monitoring_rollback_system.py  mams_013_typescript_ast_parser.py  mams_014_enhanced_frontend_analyzer.py  mams_015_dependency_validator.py  mams_016_import_rewriter.py  mams_017_frontend_orchestrator_integration.py  mams_018_review_ui_generator.py  mams_config.py  mams_deduplication_engine.py  mams_documentation_generator.py  mams_documentation_generator_robust.py  mams_enhanced_checkpoint_management.py  mams_frontend_discovery_engine.py  mams_logging.py  mams_orchestrator_enhanced_fixed.py  mams_orchestrator_enhanced_integration.py  mams_populate_dependency_graph.py
src/ark_tools/mams_core/extractors/: component_extractor.py
src/ark_tools/mams_core/generators/: blueprint_generator.py  frontend_integration_generator.py  unified_generator.py  unified_generator_enhanced.py
src/ark_tools/mams_core/mapping/: MAMS_MASTER_MAPPING.json
src/ark_tools/mams_core/transformers/: safe_transformer.py
src/ark_tools/mams_core/validators/: check_syntax.py  roundtrip.py
src/ark_tools/reporting/: __init__.py  base.py  collectors.py  generators.py
src/ark_tools/setup/: __init__.py  cli.py  configurator.py  detector.py  orchestrator.py  system_checker.py  tui.py  validator.py  web.py
src/ark_tools/utils/: __init__.py  debug_logger.py
tests/integration/: test_setup_system.py
