[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ark-tools"
version = "2.0.0"
description = "AI-Assisted Code Consolidation Platform with Agentic Workflows"
authors = [
    {name = "ARK-TOOLS Team"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["code-analysis", "refactoring", "ai-assistant", "agentic-workflows"]

dependencies = [
    # Web Framework
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-socketio>=5.3.0",
    "gunicorn>=21.0.0",
    
    # Database & ORM
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.12.0",
    "pgvector>=0.2.0",
    
    # Redis & Caching
    "redis>=5.0.0",
    "flask-caching>=2.1.0",
    
    # Authentication & Security
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "bcrypt>=4.1.0",
    
    # Code Analysis & Transformation
    "libcst>=1.1.0",
    "ast-tools>=0.1.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    
    # AI & ML
    "openai>=1.10.0",
    "anthropic>=0.7.0",
    "tiktoken>=0.5.0",
    "sentence-transformers>=2.2.0",
    
    # Data Processing
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "pydantic>=2.5.0",
    
    # Utilities
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "toml>=0.10.0",
    "requests>=2.31.0",
    "httpx>=0.25.0",
    
    # Development & Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "flake8>=6.1.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    
    # Monitoring & Logging
    "structlog>=23.2.0",
    "sentry-sdk>=1.38.0",
    "prometheus-client>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest-xdist>=3.5.0",
    "pytest-mock>=3.12.0",
    "factory-boy>=3.3.0",
    "fakeredis>=2.20.0",
    "responses>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/arkyvus/ark-tools"
Documentation = "https://ark-tools.readthedocs.io"
Repository = "https://github.com/arkyvus/ark-tools"
Issues = "https://github.com/arkyvus/ark-tools/issues"

[project.scripts]
ark-tools = "ark_tools.cli:main"
ark-analyze = "ark_tools.commands.analyze:main"
ark-transform = "ark_tools.commands.transform:main"
ark-generate = "ark_tools.commands.generate:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ark_tools*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["libcst.*", "tree_sitter.*", "pgvector.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src/ark_tools"]
omit = [
    "tests/*",
    "src/ark_tools/migrations/*",
    "src/ark_tools/cli.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]